overflow fixed

--- a/src/componants/contact/Contact.scss
+++ b/src/componants/contact/Contact.scss
@@ -10,6 +10,7 @@
 	color: white;
 	position: relative;
 	gap: 1rem;
+	overflow: hidden;
 
 	.card {
 		color: black;
@@ -29,20 +30,14 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			overflow: hidden;
 
 			img {
 				width: 100%;
 				height: 100%;
 				object-fit: contain;
+				overflow: hidden;
 			}
-		}
-
-		.address {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-weight: bold;
-			padding-top: 0.5rem;
 		}
 	}
 }
